# lazypaw

./: .dockerignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.githooks/: pre-commit
.github/workflows/: docker.yml  homebrew.yml  npm-publish.yml  release.yml
demo/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
demo/src/: App.tsx  GameOver.tsx  GamePlay.tsx  Lobby.tsx  api.ts  index.css
docs/: api-reference.md  auth-guide.md  codegen.md  comparison.md  deployment.md  getting-started.md  quickstart.md  rls-guide.md  sdk-reference.md
homebrew/: lazypaw.rb
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/lazypaw/: package.json
npm/lazypaw/lib/: index.js
npm/linux-arm64/: package.json
npm/linux-x64/: package.json
npm/win32-arm64/: package.json
npm/win32-x64/: package.json
scripts/: setup-hooks.sh
sdk/: package-lock.json  package.json  tsconfig.json
sdk/src/: index.ts
src/: auth.rs  codegen.rs  config.rs  error.rs  filters.rs  handlers.rs  init.rs  main.rs  openapi.rs  pool.rs  query.rs  realtime.rs  realtime_ws.rs  response.rs  router.rs  schema.rs  select.rs  telemetry.rs  types.rs
