[package]
name = "lazypaw"
version = "0.1.0"
edition = "2021"
description = "😴 Instant REST API from your SQL Server database — PostgREST for SQL Server"
license = "MIT"
repository = "https://github.com/copycatdb/lazypaw"
readme = "README.md"
keywords = ["sql-server", "rest", "api", "postgrest", "mssql"]
categories = ["database", "web-programming::http-server"]

[[bin]]
name = "lazypaw"
path = "src/main.rs"

[dependencies]
claw = { git = "https://github.com/copycatdb/claw.git", branch = "main", features = ["arrow"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
axum = { version = "0.8", features = ["json"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arrow = { version = "55", features = ["prettyprint", "json"] }
arrow-array = "55"
arrow-json = "55"
arrow-ipc = "55"
arrow-schema = "55"
arrow-cast = "55"
jsonwebtoken = "9"
clap = { version = "4", features = ["derive", "env"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
csv = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["serde"] }
thiserror = "2"
http = "1"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
